--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,15 @@
   --color-bf4800: #bf4800;
   --color-f5f5f7: #f5f5f7;
   --color-ededed: #ededed;
+  --color-777777: #777777;
+  --color-1c1c1b: #1c1c1b;
+}
+
+.section-heading {
+  font-size: 26px;
+  line-height: 32px;
+  font-weight: 500;
+  margin-bottom: 30px;
 }
 
 .card-wrapper {
@@ -65,6 +74,10 @@ a {
 .form-control:focus {
   box-shadow: none;
   border-color: inherit;
+}
+
+.gap-5 {
+  gap: 5px;
 }
 
 .gap-10 {
@@ -254,3 +267,148 @@ footer .input-group-text {
 
 /* categories end */
 /*end hompage */
+/* blog card */
+
+.blog-card {
+  background-color: white;
+  border-radius: 10px;
+}
+
+.blog-card img {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.blog-content {
+  padding: 15px;
+}
+
+.blog-content p.date {
+  font-size: 13px;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 0;
+  font-weight: 400;
+  color: var(--color-777777);
+}
+
+.blog-content h5 {
+  font-size: 18px;
+  color: var(--color-131921);
+}
+
+.blog-content p.desc {
+  font-size: 13px;
+  line-height: 22px;
+  color: var(--color-777777);
+}
+
+/* blog card end */
+
+/* product card */
+.product-card {
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.product-card .product-image {
+  height: 270px;
+}
+
+.product-card .product-image img {
+  object-fit: contain;
+}
+
+.product-card .product-image>img:last-child {
+  display: none;
+  transition: 0.3s;
+}
+
+.product-card:hover .product-image>img:nth-child(1) {
+  display: none;
+}
+
+.product-card:hover .product-image>img:last-child {
+  display: block;
+}
+
+
+.product-card:hover .action-bar {
+  right: 15px;
+
+}
+
+.product-card .product-details h6 {
+  color: var(--color-bf4800);
+  font-size: 13px;
+}
+
+.product-card .product-details h5 {
+  color: var(--color-131921);
+  font-size: 15px;
+}
+
+.product-card .product-details p.price {
+  font-size: 16px;
+  color: var(--color-1c1c1b) !important;
+}
+
+.action-bar {
+  top: 10%;
+  right: -23px;
+  transition: 0.3s;
+}
+
+.wishlis-icon {
+  top: 2%;
+  right: 15px;
+}
+
+/* product card end */
+
+
+/* special product */
+
+
+.special-product-card {
+  padding: 20px 10px;
+  border-radius: 10px;
+  background: white;
+}
+
+
+/* special product end here */
+/* famous  */
+.famous-card .famous-content {
+  top: 4%;
+  left: 10%;
+}
+
+.famous-card img {
+  border-radius: 10px;
+}
+
+.famous-content h5 {
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400px;
+  margin: 7px;
+  text-transform: uppercase;
+}
+
+.famous-content h6 {
+  font-size: 28px;
+  line-height: 38px;
+  font-weight: 500;
+  /* margin: 7px; */
+}
+
+.famous-content p {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 100;
+}
+
+/* famous end */
