--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,6 +9,16 @@
   --color-3b4149: #3b4149;
   --color-febd69: #febd69;
   --color-232f3e: #232f3e;
+
+  --color-bf4800: #bf4800;
+  --color-f5f5f7: #f5f5f7;
+  --color-ededed: #ededed;
+}
+
+.card-wrapper {
+  background-color: white;
+  box-shadow: 0 0 10px #0000010a;
+  padding: 15px;
 }
 
 body {
@@ -18,6 +28,19 @@ body {
 a {
   text-decoration: none;
   display: inline-block;
+}
+
+.button {
+  background-color: var(--color-232f3e);
+  color: white;
+  font-size: 14px;
+  padding: 13px 33px;
+  border-radius: 25px;
+}
+
+.button:hover {
+  background-color: var(--color-febd69);
+  color: #131921;
 }
 
 /* header */
@@ -119,3 +142,115 @@ footer .input-group-text {
 }
 
 /* end footer */
+
+/* homepage */
+
+.main-banner-content {
+  top: 25%;
+  left: 10%;
+}
+
+.main-banner-content h4 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800);
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+
+}
+
+.main-banner-content h5 {
+  font-size: 42px;
+  font-weight: 500;
+  line-height: 54px;
+  letter-spacing: -2px;
+  text-transform: none;
+}
+
+.main-banner-content p {
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.4;
+  color: var(--color-#131921);
+}
+
+.small-banner-content {
+  top: 15%;
+  left: 5%;
+}
+
+.small-banner-content h4 {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800);
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+
+}
+
+.small-banner-content h5 {
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 33px;
+  letter-spacing: -2px;
+  text-transform: none;
+}
+
+.small-banner-content p {
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.4;
+  color: var(--color-#131921);
+}
+
+.small-banner {
+  width: 49%;
+}
+
+/*home wrapper 2 */
+.home-wrapper-2 {
+  background-color: var(--color-f5f5f7);
+}
+
+/* home wrapper 2* end/
+/* categories */
+.categories {
+  background-color: white;
+  box-shadow: 0 0 10px #0000010a;
+  padding: 15px;
+}
+
+.categories>div {
+  width: 25%;
+  padding: 10px 10px 10px 20x;
+}
+
+.categories>div>div {
+  width: 60%;
+}
+
+.categories>div:nth-child(1),
+.categories>div:nth-child(2),
+.categories>div:nth-child(3),
+.categories>div:nth-child(4) {
+  border-bottom: 1px solid var(--color-ededed);
+}
+
+.categories>div:nth-child(1),
+.categories>div:nth-child(2),
+.categories>div:nth-child(3) {
+  border-right: 1px solid var(--color-ededed);
+}
+
+.categories>div:nth-child(7),
+.categories>div:nth-child(5),
+.categories>div:nth-child(6) {
+  border-right: 1px solid var(--color-ededed);
+}
+
+/* categories end */
+/*end hompage */
