--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -782,11 +782,14 @@ footer .input-group-text {
 .other-product-images>div {
   padding: 10px;
   width: 48%;
-  border: 1px solid rgba(0, 0, 0, 0.25);
 }
 
 .main-product-image>div {
   border: 1px solid rgba(0, 0, 0, 0.25);
+}
+
+.other-product-images>div .active {
+  border: 1px solid red;
 }
 
 .main-product-details {
@@ -887,6 +890,14 @@ footer .input-group-text {
 .review:not(:last-child) {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 
+}
+
+.nav-button {
+  font-size: 20px;
+  cursor: pointer;
+  background: none;
+  border: none;
+  color: #333;
 }
 
 /* detail product end */
@@ -1014,6 +1025,24 @@ footer .input-group-text {
 /* orderDetail end*/
 
 /* Profile */
+.profile-img {
+  margin: 30px;
+}
+
+.profile-img img {
+  width: 25%;
+}
+
+.profile-img .imgs {
+  border-radius: 50%;
+}
+
+.camera-icon {
+  bottom: 0;
+  height: 40px;
+  /* color: white; */
+}
+
 .text-red {
   color: red;
 }
@@ -1498,3 +1527,128 @@ input[type='checkbox'] {
 }
 
 /* checkout end */
+
+/* voucher modal */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background-color: #fff;
+  border-radius: 8px;
+  width: 600px;
+  padding: 20px;
+  position: relative;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 10px;
+}
+
+.modal-body {
+  margin-top: 20px;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  border-top: 1px solid #ddd;
+  padding-top: 10px;
+}
+
+.close-button {
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.form-control {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  flex: 1;
+}
+
+.btn {
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  color: white;
+}
+
+.btn-secondary {
+  background-color: #6c757d;
+  color: white;
+}
+
+.btn-danger {
+  background-color: #dc3545;
+  color: white;
+}
+
+.voucher-item {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.voucher-item img {
+  width: 25%;
+}
+
+.voucher-item input {
+  width: 5%;
+}
+
+/* voucher modal end */
+
+/* payment result */
+
+.payment-result p {
+  font-size: 20px;
+  color: #4caf50;
+}
+
+.payment-icon {
+  color: #4caf50;
+  font-size: 100px;
+}
+
+.payment-table {
+  width: 50%;
+  border: 2px solid;
+  margin-bottom: 40px;
+}
+
+.payment-table td {
+  padding: 10px;
+}
+
+.payment-table tr {
+  width: 50%;
+  border-bottom: 1px solid gray;
+}
+
+/* payment result end */
