castpayment update fe admin

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -268,6 +268,7 @@ footer .input-group-text {
 
 .categories>div>div {
   width: 60%;
+  padding-left: 20px;
 }
 
 .categories>div:nth-child(1),
@@ -1690,3 +1691,27 @@ input[type='checkbox'] {
 }
 
 /* payment result end */
+
+/* pagination */
+.pagination {
+  display: flex;
+  list-style: none;
+  gap: 10px;
+}
+
+.pagination li button {
+  font-weight: bold;
+  color: black;
+  width: 40px;
+  padding: 6px 12px;
+}
+
+.pagination li.active button {
+  font-weight: bold;
+  color: white;
+  background-color: blue;
+  width: 40px;
+  padding: 6px 12px;
+}
+
+/* pagination end */
