--- a/admin-app/src/assets/style.css
+++ b/admin-app/src/assets/style.css
@@ -22,3 +22,70 @@
 .custom-file-label:active {
   background-color: #004085;
 }
+
+.gap-10 {
+  gap: 10px;
+}
+
+/* product list */
+.product-list button {
+  border-radius: 5px;
+  height: 40px;
+  color: white;
+  border: none;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #1677FF;
+}
+
+.product-list button:hover {
+  color: white;
+  background-color: #0056b3;
+}
+
+.add-product {
+  width: 70%;
+}
+
+.img-product {
+  width: 30%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+/* product list end */
+
+/* branch */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 600px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.close-model {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+/* branch end */
