--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,6 +15,7 @@
   --color-ededed: #ededed;
   --color-777777: #777777;
   --color-1c1c1b: #1c1c1b;
+  --color-ee4d2d: #ee4d2d;
 }
 
 .section-heading {
@@ -103,11 +104,15 @@ a {
 
 .header-bottom .menu-links a {
   color: white;
-  font-size: 14px;
+  font-size: 17px;
   line-height: 18px;
-  font-weight: 400;
+  font-weight: 500;
   letter-spacing: 0.3;
   text-transform: uppercase;
+}
+
+.header-bottom .menu-links a:hover {
+  color: rgb(238, 77, 45);
 }
 
 .header-bottom .dropdown button {
@@ -422,8 +427,9 @@ footer .input-group-text {
 }
 
 .product-card .product-details p.price {
-  font-size: 16px;
-  color: var(--color-1c1c1b) !important;
+  font-size: 20px;
+  color: var(--color-ee4d2d) !important;
+  font-weight: 600;
 }
 
 .action-bar {
@@ -435,6 +441,17 @@ footer .input-group-text {
 .wishlis-icon {
   top: 2%;
   right: 15px;
+}
+
+.price {
+  font-size: 20px;
+  color: var(--color-ee4d2d) !important;
+}
+
+.price .currency {
+  font-size: 70%;
+  text-decoration: underline;
+  vertical-align: top;
 }
 
 /* product card end */
@@ -667,6 +684,7 @@ footer .input-group-text {
 .hover-container {
   position: relative;
   display: inline-block;
+  width: 200px;
 }
 
 .hover-container h5 {
@@ -676,8 +694,9 @@ footer .input-group-text {
 .hover-detail {
   display: none;
   position: absolute;
-  left: 100%;
-  left: 0;
+  bottom: 90%;
+  /* Đặt chữ ở phía trên icon */
+  left: 50%;
   background-color: #fff;
   padding: 5px 10px;
   border: 1px solid #ccc;
@@ -981,7 +1000,7 @@ footer .input-group-text {
 }
 
 .cart-header h4 {
-  font-size: 13px;
+  font-size: 18px;
   color: var(--color-777777);
 }
 
@@ -1864,3 +1883,92 @@ input[type='checkbox'] {
 }
 
 /* color end */
+
+/* Chat */
+.chat-container {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 500px;
+  height: 400px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  transition: all 0.3s ease;
+  z-index: 1000;
+}
+
+.chat-container.minimized {
+  height: 50px;
+  width: 100px;
+  /* border-radius: 50%; */
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.chat-header {
+  background-color: #f1f1f1;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.chat-title {
+  font-size: 19px;
+  font-weight: bold;
+  color: var(--color-ee4d2d) !important;
+}
+
+.chat-close {
+  cursor: pointer;
+  font-size: 18px;
+  padding: 0 10px;
+
+  /* Đảm bảo có khoảng cách cho dấu cộng */
+}
+
+.chat-body {
+  flex-grow: 1;
+  overflow-y: auto;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.chat-footer {
+  display: flex;
+  padding: 10px;
+  background-color: #f1f1f1;
+  justify-content: space-between;
+}
+
+.chat-footer input {
+  width: 80%;
+  padding: 5px;
+}
+
+.chat-footer button {
+  width: 15%;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.chat-container.minimized .chat-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  /* Cho phép dấu cộng dễ nhìn hơn */
+}
+
+.chat-container.minimized .chat-body,
+.chat-container.minimized .chat-footer {
+  display: none;
+}
+
+/* Chat end */
