--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -460,6 +460,36 @@ footer .input-group-text {
   padding: 15px;
 }
 
+.like-dislike-container {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding: 10px;
+}
+
+.like-button,
+.dislike-button {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.icon {
+  font-size: 24px;
+  color: #555;
+  transition: all 0.3s ease;
+}
+
+.icon.active {
+  color: #1877f2;
+}
+
+.count {
+  margin: 0;
+  font-size: 16px;
+  color: #555;
+}
+
 /* blog card end */
 
 /* product card */
@@ -611,6 +641,11 @@ footer .input-group-text {
   line-height: 20px;
   color: var(--color-777777);
   cursor: pointer;
+}
+
+.filter-cat li {
+  font-size: 16px;
+  margin: 10px;
 }
 
 .filter-card .form-check-input:focus {
@@ -1985,23 +2020,33 @@ input[type='checkbox'] {
 /* pagination */
 .pagination {
   display: flex;
-  list-style: none;
   gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
 
-.pagination li button {
-  font-weight: bold;
-  color: black;
-  width: 40px;
-  padding: 6px 12px;
+.pagination-button {
+  padding: 5px 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  background-color: white;
+  cursor: pointer;
 }
 
-.pagination li.active button {
-  font-weight: bold;
+.pagination-button.active {
+  background-color: orange;
   color: white;
-  background-color: blue;
-  width: 40px;
-  padding: 6px 12px;
+  font-weight: bold;
+}
+
+.pagination-button:disabled {
+  cursor: not-allowed;
+  opacity: 0.6;
+}
+
+.pagination-ellipsis {
+  padding: 5px;
+  font-size: 18px;
 }
 
 /* pagination end */
@@ -2102,3 +2147,45 @@ input[type='checkbox'] {
 }
 
 /* Chat end */
+
+.avatar {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+
+/* checkbox */
+.filter-section {
+  font-family: Arial, sans-serif;
+  margin: 20px;
+}
+
+.checkbox-group {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+label {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 14px;
+}
+
+input[type="checkbox"] {
+  width: 16px;
+  height: 16px;
+  cursor: pointer;
+}
+
+.more-btn {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #007bff;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+/* checkbox end*/
