--- a/admin-app/src/assets/style.css
+++ b/admin-app/src/assets/style.css
@@ -88,4 +88,71 @@
   cursor: pointer;
 }
 
+.modal-order {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content-order {
+  position: relative;
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 1200px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.close-model-order {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+ul.b {
+  list-style-type: square;
+}
+
+.order-detail ul {
+  list-style-type: square;
+  /* margin-bottom: 10px; */
+  padding: 15px;
+}
+
+.order-detail li {
+  list-style-type: square;
+  margin-bottom: 6px;
+  font-size: 16px;
+}
+
+.order-detail h4 {
+  font-size: 24px;
+  font-weight: bold;
+  color: orange;
+}
+
+.order-detail strong {
+  margin-right: 5px;
+  color: grey;
+}
+
+.order-detail select {
+  background-color: white;
+  border: 1px solid;
+  border-radius: 5px;
+  padding: 4px;
+  margin-left: 20px;
+}
+
 /* branch end */
