--- a/admin-app/src/assets/style.css
+++ b/admin-app/src/assets/style.css
@@ -156,3 +156,76 @@ ul.b {
 }
 
 /* branch end */
+
+/* notification */
+.notification-container {
+  width: 400px;
+  margin: 50px auto;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  position: absolute;
+  top: 20px;
+  right: 200px;
+  z-index: 1000;
+
+}
+
+.notification-header {
+  background-color: #fff;
+  color: #d9534f;
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+  border-bottom: 1px solid #ddd;
+}
+
+.notification-list {
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+.notification-item {
+  padding: 12px 16px;
+  border-bottom: 1px solid #f1f1f1;
+}
+
+.notification-item:last-child {
+  border-bottom: none;
+}
+
+.notification-item strong {
+  display: block;
+  font-size: 16px;
+  margin-bottom: 6px;
+  color: #333;
+}
+
+.notification-item p {
+  font-size: 14px;
+  color: #666;
+  margin: 0 0 6px;
+}
+
+.notification-item span {
+  font-size: 12px;
+  color: #999;
+  margin-left: -20px;
+}
+
+.notification-arrow {
+  position: absolute;
+  top: 70px;
+  left: 87%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #fff;
+  border-radius: 4px;
+}
+
+/* notification end */
