--- a/admin-app/src/App.css
+++ b/admin-app/src/App.css
@@ -46,3 +46,48 @@
   font-family: Roboto !important;
   color: var(--color-828599);
 }
+
+/* payment result */
+
+.payment-result p {
+  font-size: 20px;
+  color: #4caf50;
+}
+
+.payment-icon {
+  color: #4caf50;
+  font-size: 60px;
+}
+
+.payment-table {
+  width: 50%;
+  border: 2px solid;
+  margin-top: 20px;
+}
+
+.payment-table td {
+  padding: 10px;
+}
+
+.payment-table tr {
+  width: 50%;
+  border-bottom: 1px solid gray;
+}
+
+.payment-button {
+  width: 150px;
+  height: 50px;
+  background-color: #007bff;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.payment-button:hover {
+  background-color: #0056b3;
+  box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
+}
+/* payment result end */
