--- a/admin-app/src/assets/style.css
+++ b/admin-app/src/assets/style.css
@@ -566,3 +566,23 @@ ul.b {
 }
 /* voucher end*/
 
+.loading-container {
+  position: absolute; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.5); 
+  backdrop-filter: blur(3px);
+  z-index: 999; 
+}
+
+.loading-text {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #555;
+  animation: fadeInOut 1.5s infinite;
+}
