--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1022,12 +1022,22 @@ footer .input-group-text {
   border-radius: 10px;
 }
 
-.main-product-image img {
+.main-product-image{
   width: 100% !important;
   height: 600px !important;
   object-fit: cover;
 }
-
+.image-main{
+  display: grid;
+  place-items: center;
+  height: 100%;
+  width: 100%;
+}
+.image-main img{
+  max-width: 100% !important;
+  max-height: 100% !important;
+  object-fit: cover;
+}
 .main-product-image .js-image-zoom__zoomed-image {
   left: 55px !important;
   padding: 10px;
