--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -358,9 +358,13 @@ footer .input-group-text {
   box-shadow: 0 0 10px #0000010a;
   padding: 15px;
 }
+.category-img {
+ width: 120px;
+ height: 120px;
+}
 
 .categories>div {
-  width: 25%;
+  width: 30%;
   padding: 10px 10px 10px 20x;
 }
 
