--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -578,6 +578,7 @@ footer .input-group-text {
   padding: 20px 10px;
   border-radius: 10px;
   background: white;
+  height: 400px;
 }
 
 .special-product-card img {
