--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -474,11 +474,10 @@ footer .input-group-text {
 
 .icon {
   font-size: 24px;
-  color: #555;
+  /* color: #555; */
   transition: all 0.3s ease;
 }
-
-.icon.active {
+.active {
   color: #1877f2;
 }
 
